--- a/linux snippets.ipynb
+++ b/linux snippets.ipynb
@@ -8,11 +8,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### remove a directory\n",
+    "rmdir\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## change mode\n",
+    "chmod \n",
+    "forexample with \"chmod 777 myfile\" anyone can read, write and execute"
+   ]
   },
   {
    "cell_type": "markdown",
